--- a/src/main/resources/templates/event/admincreateEventForm.html
+++ b/src/main/resources/templates/event/admincreateEventForm.html
@@ -1,8 +1,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layout/defaultLayout}">
-<!-- 페이지의 제목 설정 -->
+      layout:decorate="~{layout/adminLayout}">
+<!-- 페이지의 제목 설정 --> 
 <head>
     <title>일정 등록</title>
 </head>
@@ -20,10 +20,10 @@
 <!-- Content -->
 <div layout:fragment="content" class="container">
     <!-- sidebar fragment 사용 -->
-    <div th:replace="sidebar/mypage :: mypageSidebar"></div>
+   <div th:replace="sidebar/privacy-admin :: userManagementSidebar"></div> 
     <div class="content">일정 등록</div> 
     
-   <style>
+   <style> 
     .form-container {
         margin-top: 40px; /* 조절할 여유값을 설정하세요 */ 
     }
@@ -46,7 +46,7 @@
 </style> 
 
 <div class="form-container"> 
-    <form th:action="@{/event/createEvent}" th:object="${event}" method="post">
+    <form th:action="@{/event/admincreateEvent}" th:object="${event}" method="post"> 
         <div class="form-group">
             <label for="title">제목</label>
             <input type="text" id="title" name="title" th:field="*{title}" required>
@@ -74,7 +74,7 @@
 
         <button type="submit">등록</button>
     </form>
-</div> 
+</div>  
  <script>
     var startedAtElement = document.getElementById("started_at");
     var endedAtElement = document.getElementById("ended_at");
@@ -99,6 +99,6 @@
     }
 </script> 
 </div> 
-
+ 
 </body> 
 </html>
