--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -21,7 +21,7 @@
 				<ul>
 					<li><a href="/privacy-admin/user-management/main.do">회원 관리</a></li>
 					<li>반려친구 관리</li>
-					<li>일정 관리</li>
+					<li><a href="/event/adminlistEvents.do">일정 관리</li> 
 				</ul>
 			</nav>
 		</div>
