--- a/src/main/resources/templates/mypage/main.html
+++ b/src/main/resources/templates/mypage/main.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.css" />
     <link rel="stylesheet" th:href="@{/css/mypage.css}">
     <style>
-        /* 캘린더 영역 */
+        /* 캘린더 */
         #calendar-area {
             width: 500px;
             height: 435px;
