ver 1.4.1 마이페이지(반려친구, 일정) 업데이트, 프로필 변경 기능 추가)

--- a/src/main/resources/templates/event/listEvents.html
+++ b/src/main/resources/templates/event/listEvents.html
@@ -56,11 +56,11 @@
             </thead> 
             <tbody>
                 <tr th:each="event : ${eventsList}"> 
-                    <!— <td th:text="${event.event_num}"></td> —>
+                    <!-- <td th:text="${event.event_num}"></td> -->
                     <td th:text="${#dates.format(event.ended_at, 'yyyy-MM-dd HH:mm')}"></td> 
                     <td th:text="${#dates.format(event.ended_at, 'yyyy-MM-dd HH:mm')}"></td>
                     <td><a th:href="@{/event/viewEvent(eventTitle=${event.title})}" th:text="${event.title}">일정 보기</a></td>
-                    <!— <td th:text="${#dates.format(event.ended_at, 'yyyy-MM-dd HH:mm')}"></td>  —>
+                    <!-- <td th:text="${#dates.format(event.ended_at, 'yyyy-MM-dd HH:mm')}"></td> -->
                     <td th:text="${event.location}"></td> 
                 </tr>
             </tbody> 
