--- a/src/main/resources/templates/category/categories-list.html
+++ b/src/main/resources/templates/category/categories-list.html
@@ -2,75 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="~{layout/defaultLayout}">
+	layout:decorate="~{layout/adminLayout}">
 
 <!-- index.html 고유 CSS 추가 -->
 <th:block layout:fragment="css">
 	<!--    <link rel="stylesheet" th:href="@{/css/page/home.css}" >-->
-	<style>
-        .pagination {
-            padding: 0;
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        .pagination ul {
-            list-style-type: none;
-            display: inline-block;
-            padding: 0;
-        }
-
-        .pagination li {
-            display: inline;
-            margin: 0 5px;
-        }
-
-        .pagination a {
-            text-decoration: none;
-            padding: 2px 5px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        .pagination a:hover {
-            background-color: #f2f2f2;
-        }
-
-        .pagination .active a {
-            background-color: #555;
-            color: white;
-        }
-
-        .category-table {
-            width: 50%;
-            border-collapse: collapse;
-            margin-bottom: 20px;
-        }
-        
-        .category-table th,
-        .category-table td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: center;
-        }
-
-
-        .category-table th,
-        .category-table td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: center;
-        }
-
-        .category-table th {
-            background-color: #14b8a6;
-            color: #fff
-        }
-
-        .category-table tbody tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-    </style>
+	<link rel="stylesheet" th:href="@{/css/category.css}" >
 	<!-- 기타 추가된 CSS 파일들도 포함시키세요 -->
 	<!-- <link rel="stylesheet" th:href="@{/css/page/home.css}" > -->
 </th:block>
@@ -87,108 +24,120 @@
 </th:block>
 
 <!-- Content -->
-<div layout:fragment="content">
-	<h1 class="logo_aniplant">
-		<a href="/index.do" class="link"></a> <span class="blind">애니플랜트</span>
-	</h1>
-	<h2><a th:href="@{/category/categories-list.do}">카테고리 리스트</a></h2>
-
-	<form id="perPageNumSelect" action="/category/categories-list.do" method="get">
-		<select name="newPerPageNum">
-			<option value="10" th:selected="${paging.perPageNumVal == 10}">10개씩 보기</option>
-			<option value="20" th:selected="${paging.perPageNumVal == 20}">20개씩 보기</option>
-			<option value="50" th:selected="${paging.perPageNumVal == 50}">50개씩 보기</option>
-		</select>		
-	</form>
-	<script>
-		$(document).ready(function() {
-			// 셀렉트 박스의 변경 이벤트 리스너 등록
-			$('#perPageNumSelect').on('change', function() {
-				// 선택한 값 가져오기
-				var selectedValue = $(this).val();
-
-				// 페이지당 개수 필드 업데이트
-				$('[name="perPageNum"]').val(selectedValue);
-
-				// 폼 제출
-				$('#perPageNumSelect').submit();
-			});
-		});
-	</script>
-
-	<form id="searchForm" action="/category/categories-list-search.do"
-		method="get">
-		<select name="searchType">
-			<option value="Category_Num">카테고리 번호</option>
-			<option value="Parent_Category_Num">상위 카테고리 번호</option>
-			<option value="Name">카테고리 이름</option>
-		</select> <input type="text" name="keyword" placeholder="검색어를 입력하세요"> 
-		<input type="hidden" name="page" th:value="${paging.getCurrent()}"> 
-		
-		<button type="submit">검색</button>
-	</form>
+<div layout:fragment="content" class="container">
+    <!-- sidebar fragment 사용 -->
+    <div th:replace="sidebar/category :: categorySidebar"></div>
 	<div class="content">
-		<table class="category-table">
-			<tr>
-				<th>No.</th>
-				<th>카테고리 번호</th>
-				<th>상위 카테고리 번호</th>
-				<th>카테고리 이름</th>
-			</tr>
-			<!-- 검색 결과가 없는 경우 -->
-			<tr th:if="${#lists.isEmpty(categoriesList)}">
-				<td colspan="4" class="no-results">검색 결과가 없습니다.</td>
-			</tr>
+		<h2>카테고리 관리</h2>
+		<h3>
+			<a th:href="@{/category/categories-list.do}">카테고리 리스트</a>
+		</h3>
 
-			<!-- 검색 결과가 있는 경우 -->
-			<tr th:each="category, rowStat : ${categoriesList}">
-				<td th:text="${(paging.getCurrent() - 1) * paging.getPerPageNumVal() + (rowStat.index + 1)}"></td>
-				<td th:text="${category.category_num}"></td>
-				<td th:text="${category.parent_category_num}"></td>
-				<td th:text="${category.name}"></td>
-			</tr>
-		</table>`
-	</div>
-	
-	
-	<!-- 페이징 부분 -->
-	<div class="pagination">
-		<ul>
-			<!-- 처음으로 이동하는 링크 -->
-			<li th:if="${paging.cri.page > 1}"><a
-				th:href="@{/category/categories-list.do(page=1, newPerPageNum=${paging.perPageNumVal})}">처음</a>
-			</li>
-			<!-- 10페이지 이전 페이지 링크 -->
-			<li th:if="${paging.startPage - paging.pageCount > 0}"><a
-				th:href="@{/category/categories-list.do(page=${paging.startPage-10}, newPerPageNum=${paging.perPageNumVal})}">
-					<span th:unless="${paging.cri.page == 1}"><<</span>
-			</a></li>
-			<!-- 1페이지 이전 페이지 링크 -->
-			<li th:if="${paging.cri.page - 1 > 0}"><a
-				th:href="@{/category/categories-list.do(page=${paging.getPrev()}, newPerPageNum=${paging.perPageNumVal})}">
-					<span th:if="${paging.cri.page != 1}">이전</span>
-			</a></li>
-			<!-- 페이지 번호 링크 반복 -->
-			<li th:each="num : ${pageNumbers}"
-				th:class="${num == paging.cri.page ? 'active' : ''}"><a
-				th:href="@{/category/categories-list.do(page=${num}, newPerPageNum=${paging.perPageNumVal})}"
-				th:text="${num}"></a></li>
-			<!-- 1페이지 다음 페이지 링크 -->
-			<li th:if="${paging.cri.page + 1 <= paging.totalPage}"><a
-				th:href="@{/category/categories-list.do(page=${paging.getNext()}, newPerPageNum=${paging.perPageNumVal})}">다음</a>
-			</li>
-			<!-- 10페이지 다음 페이지 링크 -->
-			<li th:if="${paging.endPage + paging.pageCount <= paging.totalPage}">
-				<a
-				th:href="@{/category/categories-list.do(page=${paging.endPage + 1}, newPerPageNum=${paging.perPageNumVal})}">>></a>
-			</li>
-			<!-- 마지막 페이지로 이동하는 링크 -->
-			<li th:if="${paging.endPage + paging.pageCount <= paging.totalPage}">
-				<a
-				th:href="@{/category/categories-list.do(page=${paging.totalPage}, newPerPageNum=${paging.perPageNumVal})}">마지막</a>
-			</li>
-		</ul>
+		<form id="perPageNumSelect" action="/category/categories-list.do" method="get">
+			<select name="newPerPageNum">
+				<option value="10" th:selected="${paging.perPageNumVal == 10}">10개씩
+					보기</option>
+				<option value="20" th:selected="${paging.perPageNumVal == 20}">20개씩
+					보기</option>
+				<option value="50" th:selected="${paging.perPageNumVal == 50}">50개씩
+					보기</option>
+			</select>
+		</form>
+		<script>
+			$(document).ready(function() {
+				// 셀렉트 박스의 변경 이벤트 리스너 등록
+				$('#perPageNumSelect').on('change', function() {
+					// 선택한 값 가져오기
+					var selectedValue = $(this).val();
+
+					// 페이지당 개수 필드 업데이트
+					$('[name="perPageNum"]').val(selectedValue);
+
+					// 폼 제출
+					$('#perPageNumSelect').submit();
+				});
+			});
+		</script>
+
+		<form id="searchForm" action="/category/categories-list-search.do"	method="get">
+			<select name="searchType">
+				<option value="Category_Num">카테고리 번호</option>
+				<option value="Parent_Category_Num">상위 카테고리 번호</option>
+				<option value="Name">카테고리 이름</option>
+			</select> <input type="text" name="keyword" placeholder="검색어를 입력하세요">
+			<input type="hidden" name="page" th:value="${paging.getCurrent()}">
+
+			<button type="submit">검색</button>
+		</form>
+		
+		<div class="content">
+			<form action="/category/add-category-form.do"	method="get">
+				<button type="submit">등록하기</button>
+			</form>
+			<table class="category-table">
+				<tr>
+					<th>No.</th>
+					<th>카테고리 번호</th>
+					<th>상위 카테고리 번호</th>
+					<th>카테고리 이름</th>
+				</tr>
+				<!-- 검색 결과가 없는 경우 -->
+				<tr th:if="${#lists.isEmpty(categoriesList)}">
+					<td colspan="4" class="no-results">검색 결과가 없습니다.</td>
+				</tr>
+
+				<!-- 검색 결과가 있는 경우 -->
+				<tr th:each="category, rowStat : ${categoriesList}">
+				    <td th:text="${(paging.getCurrent() - 1) * paging.getPerPageNumVal() + (rowStat.index + 1)}"></td>
+				    <td th:text="${category.category_num}"></td>
+				    <td th:text="${category.parent_category_num}"></td>
+				    <td><a th:href="@{/category/view-category-detail.do(categoryNum=${category.category_num})}" th:text="${category.name}"></a></td>
+				</tr>
+			</table>
+		</div>
+
+
+		<!-- 페이징 부분 -->
+		<div class="pagination">
+			<ul>
+				<!-- 처음으로 이동하는 링크 -->
+				<li th:if="${paging.cri.page > 1}"><a
+					th:href="@{/category/categories-list.do(page=1, newPerPageNum=${paging.perPageNumVal})}">처음</a>
+				</li>
+				<!-- 10페이지 이전 페이지 링크 -->
+				<li th:if="${paging.startPage - paging.pageCount > 0}"><a
+					th:href="@{/category/categories-list.do(page=${paging.startPage-10}, newPerPageNum=${paging.perPageNumVal})}">
+						<span th:unless="${paging.cri.page == 1}"><<</span>
+				</a></li>
+				<!-- 1페이지 이전 페이지 링크 -->
+				<li th:if="${paging.cri.page - 1 > 0}"><a
+					th:href="@{/category/categories-list.do(page=${paging.getPrev()}, newPerPageNum=${paging.perPageNumVal})}">
+						<span th:if="${paging.cri.page != 1}">이전</span>
+				</a></li>
+				<!-- 페이지 번호 링크 반복 -->
+				<li th:each="num : ${pageNumbers}"
+					th:class="${num == paging.cri.page ? 'active' : ''}"><a
+					th:href="@{/category/categories-list.do(page=${num}, newPerPageNum=${paging.perPageNumVal})}"
+					th:text="${num}"></a></li>
+				<!-- 1페이지 다음 페이지 링크 -->
+				<li th:if="${paging.cri.page + 1 <= paging.totalPage}"><a
+					th:href="@{/category/categories-list.do(page=${paging.getNext()}, newPerPageNum=${paging.perPageNumVal})}">다음</a>
+				</li>
+				<!-- 10페이지 다음 페이지 링크 -->
+				<li th:if="${paging.endPage + paging.pageCount <= paging.totalPage}">
+					<a
+					th:href="@{/category/categories-list.do(page=${paging.endPage + 1}, newPerPageNum=${paging.perPageNumVal})}">>></a>
+				</li>
+				<!-- 마지막 페이지로 이동하는 링크 -->
+				<li th:if="${paging.endPage + paging.pageCount <= paging.totalPage}">
+					<a
+					th:href="@{/category/categories-list.do(page=${paging.totalPage}, newPerPageNum=${paging.perPageNumVal})}">마지막</a>
+				</li>
+			</ul>
+		</div>
+
 	</div>
 
 </div>
+
 
