--- a/src/main/resources/templates/mypage/my-info-delete.html
+++ b/src/main/resources/templates/mypage/my-info-delete.html
@@ -3,10 +3,11 @@
 
 <!-- 해당 페이지 고유 CSS 추가 -->
 <th:block layout:fragment="css">
+	<link rel="stylesheet" th:href="@{/css/mypage.css}">
 	<style>
-		.error {
-			color: red;
-			font-size: 12px;
+		.content {
+			width: 815px;
+			margin: 7.5px;
 		}
 	</style>
 </th:block>
