--- a/src/main/resources/templates/mypage/pet-info.html
+++ b/src/main/resources/templates/mypage/pet-info.html
@@ -3,7 +3,7 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/defaultLayout}">
 
 <head>
-	<title>애니플랜트 : 반려친구 정보</title>
+	<title>반려친구 정보</title>
 </head>
 <th:block layout:fragment="css">
 </th:block>
