--- a/src/main/resources/templates/mypage/pet-list.html
+++ b/src/main/resources/templates/mypage/pet-list.html
@@ -3,7 +3,7 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/defaultLayout}">
 
 <head>
-	<title>애니플랜트 : 반려친구 리스트</title>
+	<title>반려친구 리스트</title>
 </head>
 <th:block layout:fragment="css">
 	<!--    <link rel="stylesheet" th:href="@{/css/page/home.css}" >-->
