--- a/src/main/resources/templates/event/listEvents.html
+++ b/src/main/resources/templates/event/listEvents.html
@@ -6,65 +6,266 @@
       
 <!-- index.html 고유 CSS 추가 -->
 <th:block layout:fragment="css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.css" />
     <link rel="stylesheet" th:href="@{/css/mypage.css}">
     <style> 
-        .button {
-        }   
-        table {
-            border-collapse: collapse;    
+        #event-list-area > table {
+            border-collapse: collapse;
+            width: 797px;
+            margin: 10px;
+            /* padding: 5px; */
         }  
         th, td { 
             border: 1px solid black;
             padding: 8px;
-            text-align: center; 
         }
         th {
             background-color: #f2f2f2;
         }
-        #event-btn-area {
+        /* 캘린더 */
+        #calendar-area {
+            width: 797px;
+            height: auto;
+            padding: 5px;
+            margin: 5px;
+            /* border-radius: 5px; */
+            /* border: 1px solid #9fe1da; */
+            /* transition: box-shadow 0.3s; */
+        }
+        /* #calendar-area:hover {
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        } */
+        #calendar {
+            max-width: px;
+            margin: 0 auto;
+        }
+        .fc-daygrid-day-top .fc-daygrid-day-number {
+            padding: 0px 4px;
+        }
+        .fc .fc-button {
+            line-height: 0;
+            font-weight: 500;
+        }
+        .fc .fc-button-primary {
+            background-color: #14b8a6;
+            border: none;
+            transition: background-color 0.3s;
+        }
+        .fc .fc-button-primary:hover {
+            background-color: #0d766a;
+        }
+        td { 
+            font-size: 13px;
+        }
+        .fc-event {
+            transition: background-color 0.3s;
+            transition: border-color 0.3s;
+            background-color: transparent;
+            border: none;
+            color: black;
+        }
+        .fc-event:hover {
+            background-color: rgba(128, 128, 128, 0.1); 
+            border: none;
+            color: black;
+        }
+        .fc-daygrid-dot-event {
+            align-items: center;
             display: flex;
-            justify-content: right;
+            padding: 2px 0px;
+        }
+        .fc ::after, .fc ::before {
+            vertical-align: top;
+        }
+        .fc-event-title-container {
+            background-color: #14b8a6;
+            border-radius: 3px;
+        }
+        .fc-event-title-container:hover {
+            opacity: 0.7;
+        }
+        .fc-daygrid-event-dot {
+            margin-left: 2px;
+            margin-right: 2px;
+        }
+        .fc-event-title {
+            margin-left: 2px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+
+        /* 툴팁 */
+        .popper,
+        .tooltip {
+            position: absolute;
+            z-index: 9999;
+            background: #d7f3f0;
+            color: black;
+            width: 150px;
+            border-radius: 3px;
+            box-shadow: 0 0 2px rgba(0,0,0,0.5);
+            padding: 10px;
+            text-align: center;
+        }
+        .style5 .tooltip {
+            background: #1E252B;
+            color: #FFFFFF;
+            max-width: 200px;
+            width: auto;
+            font-size: .8rem;
+            padding: .5em 1em;
+        }
+        .popper .popper__arrow,
+        .tooltip .tooltip-arrow {
+            width: 0;
+            height: 0;
+            border-style: solid;
+            position: absolute;
+            margin: 5px;
+        }
+
+        .tooltip .tooltip-arrow,
+        .popper .popper__arrow {
+            border-color: #d7f3f0;
+        }
+        .style5 .tooltip .tooltip-arrow {
+            border-color: #1E252B;
+        }
+        .popper[x-placement^="top"],
+        .tooltip[x-placement^="top"] {
+            margin-bottom: 5px;
+        }
+        .popper[x-placement^="top"] .popper__arrow,
+        .tooltip[x-placement^="top"] .tooltip-arrow {
+            border-width: 5px 5px 0 5px;
+            border-left-color: transparent;
+            border-right-color: transparent;
+            border-bottom-color: transparent;
+            bottom: -5px;
+            left: calc(50% - 5px);
+            margin-top: 0;
+            margin-bottom: 0;
+        }
+        .popper[x-placement^="bottom"],
+        .tooltip[x-placement^="bottom"] {
+            margin-top: 5px;
+        }
+        .tooltip[x-placement^="bottom"] .tooltip-arrow,
+        .popper[x-placement^="bottom"] .popper__arrow {
+            border-width: 0 5px 5px 5px;
+            border-left-color: transparent;
+            border-right-color: transparent;
+            border-top-color: transparent;
+            top: -5px;
+            left: calc(50% - 5px);
+            margin-top: 0;
+            margin-bottom: 0;
+        }
+        .tooltip[x-placement^="right"],
+        .popper[x-placement^="right"] {
+            margin-left: 5px;
+        }
+        .popper[x-placement^="right"] .popper__arrow,
+        .tooltip[x-placement^="right"] .tooltip-arrow {
+            border-width: 5px 5px 5px 0;
+            border-left-color: transparent;
+            border-top-color: transparent;
+            border-bottom-color: transparent;
+            left: -5px;
+            top: calc(50% - 5px);
+            margin-left: 0;
+            margin-right: 0;
+        }
+        .popper[x-placement^="left"],
+        .tooltip[x-placement^="left"] {
+            margin-right: 5px;
+        }
+        .popper[x-placement^="left"] .popper__arrow,
+        .tooltip[x-placement^="left"] .tooltip-arrow {
+            border-width: 5px 0 5px 5px;
+            border-top-color: transparent;
+            border-right-color: transparent;
+            border-bottom-color: transparent;
+            right: -5px;
+            top: calc(50% - 5px);
+            margin-left: 0;
+            margin-right: 0;
+        }
+        .event-list {
+            margin-left: 10px;
+            width: 570px;
+        }
+        .event-date {
+            font-weight: bold;
+            border-bottom: 1px solid #B2E7E1;
+        }
+
+        .event-details {
+            display: flex;
+            justify-content: space-between;
+            padding: 5px 0;
+        }
+        .event-title, .event-content, .event-location, .event-time {
+            margin-right: 5px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+        .event-title {
+            width: 195px;
+        }
+        .event-content {
+            width: 240px;
+        }
+        .event-location {
+            width: 75px;
+        }
+        .event-time {
+            width: 40px;
         }
     </style>
 </th:block>
 <!-- index.html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
-    <!--    <script th:src="@{/js/page/home.js}"></script>-->
+    <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js'></script>
+    <script src='fullcalendar/core/locales/es.global.js'></script>
+    <script th:src="@{/js/mypage.js}"></script>
+    <script src='https://unpkg.com/popper.js/dist/umd/popper.min.js'></script>
+    <script src='https://unpkg.com/tooltip.js/dist/umd/tooltip.min.js'></script>
+    <script>
+        $(document).ready(function() {
+            $("#event-register-btn").click(function() {
+                window.location.href = "/event/createEventForm";
+            });
+        });
+    </script>
 </th:block>
        
 <head>
     <meta charset="UTF-8">
-    <title>일정 관리</title> 
+    <title>일정 관리</title>
 </head>  
 
 <body> 
 <div layout:fragment="content" class="container">
     <div th:replace="sidebar/mypage :: mypageSidebar"></div>
     <div class="content">
-        <h2>일정 관리</h2> 
-        <div id="event-btn-area"><a class="button" th:href="@{/event/createEventForm}">일정 등록</a></div>
-        <table>  
-            <thead> 
-                <tr>
-                    <!-- <th>번호</th>  -->
-                    <th>날짜</th>
-                    <th>시간</th>
-                    <th>제목</th>
-                    <th>내용</th>
-                    <th>장소</th>
-                </tr> 
-            </thead> 
-            <tbody>
-                <tr th:each="event : ${eventsList}"> 
-                    <!-- <td th:text="${event.event_num}"></td> -->
-                    <td th:text="${#dates.format(event.ended_at, 'yyyy-MM-dd HH:mm')}"></td> 
-                    <td th:text="${#dates.format(event.ended_at, 'yyyy-MM-dd HH:mm')}"></td>
-                    <td><a th:href="@{/event/viewEvent(eventTitle=${event.title})}" th:text="${event.title}">일정 보기</a></td>
-                    <!-- <td th:text="${#dates.format(event.ended_at, 'yyyy-MM-dd HH:mm')}"></td> -->
-                    <td th:text="${event.location}"></td> 
-                </tr>
-            </tbody> 
-        </table>    
+        <div class="h2-wrapper"><h2>일정 관리</h2><button type="button" id="event-register-btn">일정 등록</button></div>
+        <div id="calendar-area">
+            <div id="calendar"></div>
+        </div>
+        <div id="event-list-area">
+            <div th:each="event : ${eventsList}" class="event-list">
+                <div class="event-date" th:text="${#dates.format(event.ended_at, 'yyyy-MM-dd E')}"></div>
+                <div class="event-details">
+                    <span class="event-title" th:text="${event.title}"></span>
+                    <span class="event-content" th:text="${event.content}"></span>
+                    <span class="event-location" th:text="${event.location}"></span>
+                    <span class="event-time" th:text="${#dates.format(event.ended_at, 'HH:mm')}"></span>
+                </div>
+            </div>
+        </div>    
     </div> 
 </div>
 </body>
