마이페이지 펫 사진등록 완료

--- a/src/main/resources/templates/mypage/main.html
+++ b/src/main/resources/templates/mypage/main.html
@@ -217,8 +217,7 @@
                     </div>
                 </div>
                 <div id="myPetInfo-area">
-                    <!-- <div><img id="my-pet-profile-img" th:src="@{${pet.profile_picture}}"></div> -->
-                    <div><img id="my-pet-profile-img" th:src="@{/img/hatching-chick.png}"></div>
+                    <div><img id="my-pet-profile-img" th:src="@{${pet.profile_picture}}"></div>         
                     <div class="info-li">
                         <li><strong>이름 : </strong> <span th:text="${pet[0].name}"></span></li>
                         <li><strong>나이 : </strong> <span></span></li>
