--- a/src/main/resources/templates/mypage/pet-info.html
+++ b/src/main/resources/templates/mypage/pet-info.html
@@ -34,8 +34,8 @@
             </div>
 			<input type="hidden" id="petNo" name="pet_no" th:value="${pet.pet_no}">
 			<input type="text" id="nameUpdateInput" name="name" th:value="${pet.name}">
-			<input type="text " id="birthUpdateInput" name="birth" th:value="${#dates.format(pet.birth,'yyyy-MM-dd')}">
-			<input type="text" id="adoptedAtUpdateInput" name="adopted_at"
+			<input type="date" id="birthUpdateInput" name="birth" th:value="${#dates.format(pet.birth,'yyyy-MM-dd')}">
+			<input type="date" id="adoptedAtUpdateInput" name="adopted_at"
 				th:value="${#dates.format(pet.adopted_at,'yyyy-MM-dd')}">
 
 			<!-- 저장하기 버튼을 클릭하면 수정된 정보를 서버에 전달하는 함수를 호출합니다. -->
