--- a/src/main/resources/templates/mypage/pet-join.html
+++ b/src/main/resources/templates/mypage/pet-join.html
@@ -16,16 +16,18 @@
 	<div th:replace="sidebar/mypage :: mypageSidebar"></div>
 	<div class="content">
 		<form id="join_form" name="join_form" method="post" action="/api/register-pet" enctype="application/json">
-			<div id="profile-area">
-                <img id="curProfileImage" class="profileImage" th:src="@{${pet.profile_picture}}">
-                <input type="text" id="profileInput" th:value="${pet.profile_picture}" style="display: none;" disabled>
-                <button type="button" id="editProfile" class="update-btn">프로필 사진 변경</button>
-                <button type="button" id="resetProfile" class="update-btn">초기화</button>
-            </div>
 			<input type="text" id="nameInput" name="name" placeholder="이름을 입력해 주세요"><br>
-			<input type="date" id="birthInput" name="birthInput" placeholder="생일을 입력해 주세요"><br>
-			<input type="date" id="adopted_atInput" name="adopted_at" placeholder="입양일"><br>
-			<button type="button" id="join_btn" class="btn_submit">등록</button>
+			<input type="date" id="birth_input" name="birthInput" placeholder="생일을 입력해 주세요"><br>
+			<input type="date" id="adopted_at_input" name="adopted_atInput " placeholder=입양일><br>
+
+			<input type='radio' id='animal' name='species' value='animal'>
+			<label for='animal'>동물</label><br>
+
+			<input type='radio' id='plant' name='species' value='plant'>
+			<label for='plant'>식물</label><br>
+
+			<button type=button id=join_btn class=btn_submit>등록</button>
 		</form>
+
 	</div>
 </div>
