--- a/src/main/resources/templates/category/add-category-form.html
+++ b/src/main/resources/templates/category/add-category-form.html
@@ -28,7 +28,7 @@
 			<label for="parentCategory">상위 카테고리 번호:</label>
 			<div id="childCategoryContainer">
 				<select id="parentCategory" name="parentCategoryNum">
-					<option value="0">None</option>
+					<option value="0">선택</option>
 					<!-- 타임리프를 사용하여 서버에서 조회된 부모 카테고리 번호를 반복하여 셀렉트 박스로 표시합니다. -->
 					<th:block th:each="parentCategories : ${categories}">
 						<option th:value="${parentCategories.category_num}" th:text="${parentCategories.name}"></option>
@@ -56,7 +56,7 @@
 			                
 			                childCategorySelect.append($('<option>', {
 			                    value: "0",
-			                    text: "None"
+			                    text: "선택"
 			                }));
 			                
 			                $.each(childCategories, function(index, category) {
@@ -89,7 +89,7 @@
 			                                
 			                                secondLevelChildCategorySelect.append($('<option>', {
 			                                    value: "0",
-			                                    text: "None"
+			                                    text: "선택"
 			                                }));
 			                                
 			                                $.each(secondLevelChildCategories, function(index, category) {
@@ -122,7 +122,7 @@
 			                                                
 			                                                thirdLevelChildCategorySelect.append($('<option>', {
 			                                                    value: "0",
-			                                                    text: "None"
+			                                                    text: "선택"
 			                                                }));
 			                                                
 			                                                $.each(thirdLevelChildCategories, function(index, category) {
