--- a/src/main/resources/templates/sidebar/category.html
+++ b/src/main/resources/templates/sidebar/category.html
@@ -11,7 +11,7 @@
             <li><a href="/category/categories-list.do">카테고리 관리</a></li>
         </ul>
         <div class="contact-us">
-            <a href="">문의</a>
+            <a href="/board/listArticles.do?categoryNum=7">고객문의</a>
         </div>
     </div>
 </body>
